--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,21 @@ jobs:
         files: ${{ github.workspace }}/lucee/test/reports/junit-test-results-${{env.luceeVersion}}.xml
         check_name: "Test Results"
 
+    # - name: Setup env var for archive upload
+    #     id: current_version
+    #     run: echo "EXTENSION_FILE=`echo dist/*.lex`" >> $GITHUB_ENV
+
+    # - name: Upload Binaries to S3
+    #   uses: jakejarvis/s3-sync-action@master
+    #   with:
+    #     args: --acl public-read
+    #   env:
+    #     AWS_S3_BUCKET: "downloads.ortussolutions.com"
+    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
+    #     SOURCE_DIR: "${{env.EXTENSION_FILE}}"
+    #     DEST_DIR: "lucee/extensions/extension-hibernate"
+
   maven_build:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '__CI__')"
