--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,8 +97,6 @@ jobs:
     if: "!contains(github.event.head_commit.message, '__CI__')"
     steps:
       - uses: actions/checkout@v3
-        with:
-          token: ${{secrets.GH_TOKEN}}
 
       - name: Set up JDK 8
         uses: actions/setup-java@v3
@@ -115,13 +113,16 @@ jobs:
       - name: Generate Javadocs
         run: mvn --batch-mode -f pom.xml javadoc:javadoc
 
-      ## TODO: Publish apidocs to S3
-
-      # - name: Commit Javadocs
-      #   uses: stefanzweifel/git-auto-commit-action@v4
-      #   with:
-      #     file_pattern: "docs"
-      #     commit_message: "📘 DOC: Rebuild API Javadocs __CI__"
+      - name: Upload API Docs to S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read
+        env:
+          AWS_S3_BUCKET: ${{ secrets.S3_APIDOCS_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_ID_DOWNLOAD }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_KEY_DOWNLOAD }}
+          SOURCE_DIR: ".tmp/apidocs"
+          DEST_DIR: "lucee/hibernate-extension/"
 
   format:
     runs-on: ubuntu-latest
