--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,9 +118,9 @@ jobs:
         with:
           args: --acl public-read
         env:
-          AWS_S3_BUCKET: ${{ secrets.S3_APIDOCS_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_ID_DOWNLOAD }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_KEY_DOWNLOAD }}
+          AWS_S3_BUCKET: ${{ secrets.AWS_APIDOCS_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
           SOURCE_DIR: ".tmp/apidocs"
           DEST_DIR: "lucee/hibernate-extension/"
 
