--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,6 @@ jobs:
 
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '__CI__')"
-    env:
-      luceeVersion: 6.0.0.316-SNAPSHOT
 
     steps:
     - uses: actions/checkout@v3
@@ -28,14 +26,6 @@ jobs:
         path: ~/.m2
         key: lucee-script-runner-maven-cache
 
-    - name: Cache Lucee files
-      uses: actions/cache@v3
-      with:
-        path: _actions/lucee/script-runner/main/lucee-download-cache
-        key: lucee-downloads-${{ env.luceeVersion }}
-        restore-keys: |
-          lucee-downloads
-
     - name: Build with Ant
       run: ant -noinput -verbose -buildfile build.xml
 
@@ -44,12 +34,40 @@ jobs:
       with:
         name: hibernate-lex
         path: dist/*.lex
+    
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    env:
+      luceeVersion: 6.0.0.316-SNAPSHOT
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
 
     - name: Checkout Lucee
       uses: actions/checkout@v3
       with:
         repository: lucee/lucee
         path: lucee
+
+    - name: Cache Lucee files
+      uses: actions/cache@v3
+      with:
+        path: _actions/lucee/script-runner/main/lucee-download-cache
+        key: lucee-downloads-${{ env.luceeVersion }}
+        restore-keys: |
+          lucee-downloads
+
+    - name: Download Artifact
+      uses: actions/download-artifact@master
+      with:
+        name: hibernate-lex
+        path: dist/*.lex
 
     - name: Run Lucee Test Suite (testLabels="orm")
       uses: lucee/script-runner@main
@@ -69,26 +87,26 @@ jobs:
         files: ${{ github.workspace }}/lucee/test/reports/junit-test-results-${{env.luceeVersion}}.xml
         check_name: "Test Results"
 
-  maven_build:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '__CI__')"
-    strategy:
-      fail-fast: false
-      matrix:
-        lucee_version: ["5.3.10.97"]
-        java_version: [ "8", "11", "17" ]
+  # maven_build:
+  #   runs-on: ubuntu-latest
+  #   if: "!contains(github.event.head_commit.message, '__CI__')"
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       lucee_version: ["5.3.10.97"]
+  #       java_version: [ "8", "11", "17" ]
 
-    steps:
-      - uses: actions/checkout@v3
+  #   steps:
+  #     - uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: '${{matrix.java_version}}'
-          distribution: 'temurin'
+  #     - name: Set up JDK
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         java-version: '${{matrix.java_version}}'
+  #         distribution: 'temurin'
 
-      - name: Build with Maven
-        run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} compile
+  #     - name: Build with Maven
+  #       run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} compile
 
   javadocs:
     runs-on: ubuntu-latest
@@ -160,7 +178,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: build,javadocs,format
+    needs: [build, javadocs, format]
     steps:
       - name: Get Project Version for Javadocs Versioning
         id: current_version
