--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,38 +147,9 @@ jobs:
           SOURCE_DIR: "docs"
           DEST_DIR: "lucee/hibernate-extension/${{ env.VERSION }}/"
 
-  format:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '__CI__')"
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          token: ${{secrets.GH_TOKEN}}
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: maven-cache
-
-      - name: Format Java source code
-        run: mvn --batch-mode -f pom.xml formatter:format
-
-      - name: Commit formatting changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          file_pattern: "docs"
-          commit_message: "🤖 CI: Auto-format Java source __CI__"
-
   publish:
     runs-on: ubuntu-latest
-    needs: [build, javadocs, format]
+    needs: [build, javadocs]
     steps:
       - name: Get Project Version for Javadocs Versioning
         id: current_version
