--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,6 +78,13 @@ jobs:
             mkdir .tmp/
             mv target/*.lex .tmp/
 
+      - name: Update changelog [unreleased] with latest version
+        uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
+        if: env.SNAPSHOT == 'false'
+        with:
+          changelogPath: ./changelog.md
+          tag: v${{ env.VERSION }}
+
       - name: Commit Changelog To Master
         uses: EndBug/add-and-commit@v9.1.1
         if: env.SNAPSHOT == 'false'
